# prbe-knowledge

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .venv  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PUBLISH_RUNBOOK.md  README.md  SECURITY.md  STEPS.md  TODOS.md  alembic.ini  docker-compose.yml  fly.community.toml  fly.cron.toml  fly.dashboard.toml  fly.inferred-edges.toml  fly.ingestion.toml  fly.poller.toml  fly.retrieval.toml  fly.side-worker.toml  fly.wiki-backfill.toml  fly.wiki-bootstrap.toml  fly.wiki-cron.toml  fly.wiki-synthesis.toml  fly.wiki-worker.toml  fly.worker.toml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  mcp-config.json.template
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/prompts/: nightly-optimization.md
.github/workflows/: agent-optimization-nightly.yml  deploy.yml  dispatch-data-plane.yml  evals.yml  knowledge-cron.yml  nightly-improvement-resume.yml  tests.yml  wiki-nightly.yml
db/: schema.sql
db/migrations/: env.py
deploy/helm/: Chart.yaml  README.md  values.yaml
docs/: connectors.md  database-url-cutover.md  disaster-recovery.md  llm-migration-inventory.md  phase0-design.md  post-approval-knowledge-plan-a-summary.md  retrieval-architecture.md  roadmap.md  self-hosting.md  storage-architecture.md  wiki-backfill-plan.md  wiki-bootstrap-plan.md
docs/superpowers/: PHASE-3-DAEMON-BRIEF.md
engine/: __init__.py
engine/community/: leiden.py
engine/ingest/: chunker.py  connectedness.py  custom_ingest_routes.py  entity_clusters_routes.py  entity_merge_suggestions_routes.py  graph_writer.py  manual_uploads.py  normalizer.py  purge.py  source_ts.py  worker.py
engine/mcp/: config.py  consts.py  main.py  server.py
engine/retrieval/: acl.py  auth.py  dedup.py  doc_type_resolver.py  fusion.py  graph_explore.py  grounding.py  helpers.py  list_pipeline.py  main.py  middleware.py  pipeline.py  router.py  surprise.py  synthesis.py  temporal.py  usage.py
engine/shared/: backend_client.py  claude_code_extraction.py  community.py  config.py  constants.py  custom_ingest.py  customer_mapping.py  customer_prefs.py  db.py  embeddings.py  encryption.py  github_app.py  litellm_key.py  llm.py  (+9 more)
kb/: __init__.py  admin_routes.py  backfill_routes.py  backfill_runner.py  feature_nodes_routes.py  github_seed.py  ingestion_app.py  internal_devices.py  purge_routes.py  session_completer.py  slack_lifecycle.py  stats_routes.py  wiki_links.py  wiki_routes.py  worker.py
sandbox/: Dockerfile.product  README.md  dev_corpus.sql  entrypoint.sh  replay_proxy.py  smoke.sh
scripts/: __init__.py  backfill.py  backfill_cc_metadata_chunks.py  backfill_directed_phrases.py  backfill_embedding_v2.py  backfill_entity_edges.py  backfill_graph_node_embeddings.py  backfill_metadata_chunks.py  bootstrap_customer.py  code_graph_backfill_existing.py  cron_query_cache_sweep.py  cron_session_completer.py  cron_stuck_queue_reclaim.py  cron_token_health_check.py  cron_token_refresh.py  eval_directed_phrases.py  fly-secrets-sync.sh  github_seed_token.py  inferred_edges_backfill_existing.py  leiden_one_shot.py  migrate.py  neon-migrate.sh  neon-psql.sh  neon-reset.sh  neon-store.sh  run_auto_merge_backfill.py  seed_synthetic.py  smoke_phase2_clusters.py  smoke_post_approval_knowledge.sh  verify_slack_cursor_migration.py  wiki_synthesis_catchup.py
shared/: audit.py  backend_client.py  claude_code_extraction.py  config.py  constants.py  custom_ingest.py  customer_mapping.py  customer_prefs.py  db.py  embeddings.py  encryption.py  exceptions.py  github_auth.py  investigation_schemas.py  litellm_key.py  llm.py  llm_tools.py  locks.py  metrics.py  models.py  provisioning.py  state_signing.py  storage.py  telemetry.py  tokens.py
tasks/: dashboard.md  todo.md
tests/: conftest.py  test_admin_routes.py  test_auto_merge_analyzer.py  test_backend_client.py  test_backfill.py  test_backfill_cc_doc_titles_migration.py  test_backfill_cc_person_name_email_migration.py  test_backfill_codex_doc_titles_migration.py  test_backfill_embedding_v2.py  test_backfill_reclaim.py  test_bucket_for_resolution.py  test_chunk_diff.py  test_chunker.py  test_claude_code_e2e.py  test_claude_code_events_to_text.py  test_claude_code_extraction.py  test_code_graph_chunking.py  test_code_graph_reindex.py  test_codegraph_bridge_unit.py  test_codegraph_connector_dispatch.py  test_codegraph_extractors_python.py  test_codegraph_extractors_smoke.py  test_codegraph_fetch_token_refresh.py  test_codegraph_file_document.py  test_codegraph_github_branch_filter.py  test_codegraph_normalizer_pre_chunked.py  test_codegraph_pipeline_integration.py  test_codegraph_qualifier.py  test_codegraph_rechunk_inval_migration.py  test_codegraph_secrets.py  test_codex_metadata_device_id.py  test_constants.py  test_cross_repo_deps_classifier_failure.py  test_cross_repo_deps_degree_decrement.py  test_cross_repo_deps_shared_llm.py  test_cross_repo_deps_wrong_direction_filter.py  test_custom_ingest.py  test_custom_ingest_tokens_migration.py  test_customer_incident_mcp_servers_migration.py  test_customer_mapping.py  (+112 more)
(+871 files in other folders)
