[project]
name = "prbe-knowledge"
version = "0.1.0"
description = "PRBE Phase 0 knowledge layer: multi-source ingestion + retrieval"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.6",
    "alembic>=1.13.0",

    "boto3>=1.35.0,<1.36.0",
    "botocore>=1.35.0,<1.36.0",

    "openai>=1.55.0",
    "anthropic>=0.40.0",
    "google-genai>=0.3.0",

    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "aiolimiter>=1.1.0",

    "slack-sdk>=3.33.0",
    "PyGithub>=2.4.0",
    "notion-client>=2.2.0",

    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "orjson>=3.10.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# E501: line length (enforced via line-length above); B008: FastAPI's
# canonical Depends() / Query() etc. in argument defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared", "services"]
