[project]
name = "prbe-knowledge"
version = "0.1.0"
description = "PRBE Phase 0 knowledge layer: multi-source ingestion + retrieval"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    # Floor raised from >=0.32.0 to >=0.46.0 for the vendored MCP server's
    # graceful-shutdown contract (services/mcp; standalone prbe-knowledge-mcp
    # pinned ==0.46.0 — kept as a floor here to avoid downgrading the engine).
    "uvicorn[standard]>=0.46.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # MCP server (services/mcp, vendored from prbe-knowledge-mcp).
    "mcp==1.27.0",
    "PyJWT[crypto]>=2.10.0",

    "sqlalchemy>=2.0.35",
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.6",
    "alembic>=1.13.0",

    "boto3>=1.35.0,<1.36.0",
    "botocore>=1.35.0,<1.36.0",

    "anthropic>=0.40.0",
    "google-genai>=0.3.0",

    # LLM provider abstraction (D1). Wraps the per-provider SDKs above
    # through a single `litellm.acompletion` / `litellm.aembedding` surface.
    # Anthropic + google-genai stay pinned for direct-SDK paths
    # (`scripts/synth/llm/anthropic_client.py`, `GeminiEmbedder`).
    "litellm>=1.83,<2.0",

    "httpx>=0.27.0",
    "python-multipart>=0.0.20",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "aiolimiter>=1.1.0",

    "slack-sdk>=3.33.0",
    "PyGithub>=2.4.0",
    "notion-client>=2.2.0",

    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    # Hardened XML parsing for manual .docx uploads (entity/DTD/XXE defense).
    "defusedxml>=0.7.1",
    "orjson>=3.10.0",
    "pyyaml>=6.0",
    "tiktoken>=0.8.0",

    # community detection: Leiden algorithm for graph partitioning (nightly cron).
    # leidenalg requires python-igraph as its graph backend.
    # Only imported in services/community/; retrieval service does NOT import these.
    "leidenalg>=0.10.2",
    "python-igraph>=0.11.5",

    # code-graph: tree-sitter AST extraction. Modern py-tree-sitter binding
    # plus per-language parsers. NOT the older tree-sitter-languages wheel
    # (unmaintained as of 2025; pins to old ABI versions).
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-java>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-python-dateutil",
    "hypothesis>=6.115.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
# E501: line length (enforced via line-length above); B008: FastAPI's
# canonical Depends() / Query() etc. in argument defaults.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "eval: LLM-dependent eval harness; skipped without ANTHROPIC_API_KEY. Run with `-m eval`.",
    "integration: requires a live Postgres DB (docker compose up -d). Run with `-m integration`.",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "kb", "services"]
